# BrowserAgentFramwork

./: .editorconfig  .env.example  .gitignore  BrowserAgent.slnx  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  rebuild.sh
.github/workflows/: ci.yml
.opencode/: 01_Project_Foundation.md  02_Browser_Engine.md  03_AI_Service.md  04_Orchestrator.md  05_Phase1_Workflow.md  06_Database_Design.md  07_API_Contracts.md  08_Docker_Deployment.md  09_Open_Source_Guidelines.md  10_Phase1_Roadmap.md  11_Implementation_Plan.md
apps/ai-service/: main.py  pyproject.toml
apps/ai-service/app/api/: company.py  field_map.py  health.py  question.py  resume.py
apps/ai-service/app/prompts/: __init__.py
apps/ai-service/app/prompts/company/: system.md
apps/ai-service/app/prompts/field_mapping/: system.md
apps/ai-service/app/prompts/question/: system.md
apps/ai-service/app/prompts/resume/: system.md
apps/ai-service/app/providers/: base.py  deepseek.py  factory.py  ollama.py
apps/ai-service/app/schemas/: company.py  error.py  field_map.py  health.py  provider.py  question.py  resume.py
apps/ai-service/app/services/: base.py  company_analyzer.py  field_mapper.py  question_answering.py  resume_parser.py
apps/api/: BrowserAgent.Api.csproj  BrowserAgent.Api.http  Program.cs  appsettings.Development.json  appsettings.json
apps/web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
docker/ai/: Dockerfile
docker/api/: Dockerfile
docker/postgres/: Dockerfile
docker/web/: Dockerfile  (+1 more)
(+143 files in other folders)
